--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -50,7 +50,7 @@
                                 <connections>
                                     <outlet property="nameLabel" destination="Neg-5k-VJC" id="bZr-75-iNC"/>
                                     <outlet property="profileImageView" destination="k6U-xH-wB6" id="Tl3-1j-jgL"/>
-                                    <segue destination="UFX-zC-IYR" kind="show" id="QLb-u3-awm"/>
+                                    <segue destination="UFX-zC-IYR" kind="show" identifier="UserDetailSegue" id="QLb-u3-awm"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -73,48 +73,49 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4B9-hs-yYd">
-                                <rect key="frame" x="166" y="114" width="42" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4B9-hs-yYd">
+                                <rect key="frame" x="100" y="94" width="175" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bud-MW-ATo">
-                                <rect key="frame" x="166" y="158" width="42" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bud-MW-ATo">
+                                <rect key="frame" x="100" y="135" width="175" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hy1-F1-Tiq">
-                                <rect key="frame" x="166" y="208" width="43" height="21"/>
+                                <rect key="frame" x="100" y="176" width="175" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="scv-6n-m5z">
-                                <rect key="frame" x="67" y="269" width="240" height="273"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="scv-6n-m5z">
+                                <rect key="frame" x="67" y="237" width="240" height="305"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="Nxy-Kg-2TQ" firstAttribute="bottom" secondItem="scv-6n-m5z" secondAttribute="bottom" constant="125" id="01k-C3-tJl"/>
-                            <constraint firstItem="bud-MW-ATo" firstAttribute="leading" secondItem="hy1-F1-Tiq" secondAttribute="leading" id="7bA-Sh-OUG"/>
-                            <constraint firstItem="scv-6n-m5z" firstAttribute="leading" secondItem="Nxy-Kg-2TQ" secondAttribute="leading" constant="67" id="8oE-XW-1Mo"/>
-                            <constraint firstItem="4B9-hs-yYd" firstAttribute="top" secondItem="Nxy-Kg-2TQ" secondAttribute="top" constant="50" id="Blo-Wl-7g3"/>
-                            <constraint firstItem="hy1-F1-Tiq" firstAttribute="centerX" secondItem="scv-6n-m5z" secondAttribute="centerX" id="Dl6-jD-buK"/>
-                            <constraint firstItem="4B9-hs-yYd" firstAttribute="trailing" secondItem="bud-MW-ATo" secondAttribute="trailing" id="FCZ-jL-IQF"/>
-                            <constraint firstItem="4B9-hs-yYd" firstAttribute="leading" secondItem="bud-MW-ATo" secondAttribute="leading" id="K09-M6-oWS"/>
-                            <constraint firstItem="bud-MW-ATo" firstAttribute="top" secondItem="4B9-hs-yYd" secondAttribute="bottom" constant="23" id="QBM-9t-tf7"/>
-                            <constraint firstItem="scv-6n-m5z" firstAttribute="top" secondItem="hy1-F1-Tiq" secondAttribute="bottom" constant="40" id="VCI-YN-v4C"/>
-                            <constraint firstItem="hy1-F1-Tiq" firstAttribute="top" secondItem="bud-MW-ATo" secondAttribute="bottom" constant="29" id="nRf-1B-EEg"/>
-                            <constraint firstItem="bud-MW-ATo" firstAttribute="centerX" secondItem="hy1-F1-Tiq" secondAttribute="centerX" id="tCs-gL-x6C"/>
-                            <constraint firstItem="4B9-hs-yYd" firstAttribute="centerX" secondItem="UWU-8B-X7r" secondAttribute="centerX" id="uau-8e-hmw"/>
-                            <constraint firstItem="4B9-hs-yYd" firstAttribute="leading" secondItem="Nxy-Kg-2TQ" secondAttribute="leading" constant="166" id="w69-nL-fss"/>
+                            <constraint firstItem="scv-6n-m5z" firstAttribute="top" secondItem="hy1-F1-Tiq" secondAttribute="bottom" constant="40" id="14M-La-SLx"/>
+                            <constraint firstItem="scv-6n-m5z" firstAttribute="leading" secondItem="Nxy-Kg-2TQ" secondAttribute="leading" constant="67" id="9bw-hl-lcX"/>
+                            <constraint firstItem="hy1-F1-Tiq" firstAttribute="leading" secondItem="Nxy-Kg-2TQ" secondAttribute="leading" constant="100" id="NnM-U3-r07"/>
+                            <constraint firstItem="Nxy-Kg-2TQ" firstAttribute="bottom" secondItem="scv-6n-m5z" secondAttribute="bottom" constant="125" id="OvS-G5-eGq"/>
+                            <constraint firstItem="Nxy-Kg-2TQ" firstAttribute="trailing" secondItem="bud-MW-ATo" secondAttribute="trailing" constant="100" id="RbT-g0-IpF"/>
+                            <constraint firstItem="bud-MW-ATo" firstAttribute="top" secondItem="4B9-hs-yYd" secondAttribute="bottom" constant="20" id="YgJ-QD-lJ7"/>
+                            <constraint firstItem="Nxy-Kg-2TQ" firstAttribute="trailing" secondItem="hy1-F1-Tiq" secondAttribute="trailing" constant="100" id="ZY0-LU-6un"/>
+                            <constraint firstItem="hy1-F1-Tiq" firstAttribute="top" secondItem="bud-MW-ATo" secondAttribute="bottom" constant="20" id="fR4-bG-fjP"/>
+                            <constraint firstItem="4B9-hs-yYd" firstAttribute="top" secondItem="Nxy-Kg-2TQ" secondAttribute="top" constant="30" id="fen-HY-W6j"/>
+                            <constraint firstItem="Nxy-Kg-2TQ" firstAttribute="trailing" secondItem="scv-6n-m5z" secondAttribute="trailing" constant="68" id="lQn-Ui-pst"/>
+                            <constraint firstItem="4B9-hs-yYd" firstAttribute="leading" secondItem="Nxy-Kg-2TQ" secondAttribute="leading" constant="100" id="la0-MR-3vO"/>
+                            <constraint firstItem="bud-MW-ATo" firstAttribute="leading" secondItem="Nxy-Kg-2TQ" secondAttribute="leading" constant="100" id="pX5-dC-ISP"/>
+                            <constraint firstItem="Nxy-Kg-2TQ" firstAttribute="trailing" secondItem="4B9-hs-yYd" secondAttribute="trailing" constant="100" id="xgh-gD-9YQ"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Nxy-Kg-2TQ"/>
                     </view>
                     <connections>
                         <outlet property="emailLabel" destination="hy1-F1-Tiq" id="42n-yS-yfS"/>
+                        <outlet property="imageView" destination="scv-6n-m5z" id="Yjb-us-C70"/>
                         <outlet property="nameLabel" destination="4B9-hs-yYd" id="O9N-cd-8Tq"/>
                         <outlet property="phoneLabel" destination="bud-MW-ATo" id="2iz-77-lmM"/>
                     </connections>
