--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -27,24 +27,26 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="k6U-xH-wB6">
-                                            <rect key="frame" x="33" y="5" width="122" height="78"/>
+                                            <rect key="frame" x="10" y="5" width="100" height="78.5"/>
                                             <constraints>
-                                                <constraint firstAttribute="width" constant="122" id="oZW-lc-sxn"/>
+                                                <constraint firstAttribute="width" constant="100" id="WY4-5E-sgQ"/>
                                             </constraints>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Neg-5k-VJC">
-                                            <rect key="frame" x="236" y="34" width="105" height="21"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Neg-5k-VJC">
+                                            <rect key="frame" x="160" y="34" width="179" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="k6U-xH-wB6" firstAttribute="leading" secondItem="I2c-Yq-It1" secondAttribute="leadingMargin" constant="17" id="4gQ-1P-epi"/>
-                                        <constraint firstItem="k6U-xH-wB6" firstAttribute="centerY" secondItem="Neg-5k-VJC" secondAttribute="centerY" id="9KK-qv-IIV"/>
-                                        <constraint firstItem="Neg-5k-VJC" firstAttribute="leading" secondItem="k6U-xH-wB6" secondAttribute="trailing" constant="81" id="oMC-so-vBU"/>
-                                        <constraint firstItem="k6U-xH-wB6" firstAttribute="top" secondItem="I2c-Yq-It1" secondAttribute="topMargin" constant="-6" id="wsB-nV-Jaf"/>
-                                        <constraint firstItem="k6U-xH-wB6" firstAttribute="centerY" secondItem="I2c-Yq-It1" secondAttribute="centerY" id="xzS-S0-vKa"/>
+                                        <constraint firstItem="Neg-5k-VJC" firstAttribute="leading" secondItem="k6U-xH-wB6" secondAttribute="trailing" constant="50" id="8B6-JS-vfo"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="Neg-5k-VJC" secondAttribute="bottom" constant="23" id="AKB-pF-lia"/>
+                                        <constraint firstItem="Neg-5k-VJC" firstAttribute="top" secondItem="I2c-Yq-It1" secondAttribute="topMargin" constant="23" id="BGa-8D-5JY"/>
+                                        <constraint firstItem="k6U-xH-wB6" firstAttribute="leading" secondItem="I2c-Yq-It1" secondAttribute="leading" constant="10" id="OWx-ey-ePw"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="Neg-5k-VJC" secondAttribute="trailing" constant="20" id="OZX-LL-Ic4"/>
+                                        <constraint firstAttribute="bottom" secondItem="k6U-xH-wB6" secondAttribute="bottom" constant="5" id="RWO-9c-MgX"/>
+                                        <constraint firstItem="k6U-xH-wB6" firstAttribute="top" secondItem="I2c-Yq-It1" secondAttribute="top" constant="5" id="gsQ-Jc-OUb"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
