Everything's working as it should. Just need to set image in detail view

--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -54,7 +54,7 @@
                                 <connections>
                                     <outlet property="nameLabel" destination="r85-kv-rdX" id="8um-bK-dnO"/>
                                     <outlet property="userImageView" destination="XOQ-Tu-qXD" id="txU-Af-SqD"/>
-                                    <segue destination="cYE-W9-kjH" kind="show" id="cRi-G4-MNT"/>
+                                    <segue destination="cYE-W9-kjH" kind="show" identifier="ShowDetailSegue" id="cRi-G4-MNT"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
